# ingest

./: .editorconfig  .gitattributes  .gitignore  .sql-formatter.json  CONTRIBUTING.md  HACKING.md  Makefile  README.md  TODO.md  bms.json  post-build.sql  pyproject.toml  requirements.txt
.github/: dependabot.yml  sqlite.sh
_data/: cinepolis.csv  ticketnew.csv
bms/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+10 more)
fixtures/: adidas-runners-event.html  adidas-runners-events.html  ashwin-srinivas-live-stand-up-comedy.html  bgnbirds.html  courtyardkoota.html  dialogues-space-events.html  indiarunning.json  lavonne.html  pumarun.html  sisters-in-sweat-event.html  sisters-in-sweat.html  tonight-is-genres.json  tonight-is-parties.json  tonight-is-regulars.json
in/: known-hosts.yml
lib/: README.md
openapi/: puttingscene.yaml
patch/: aceofpubs.com.json  aceofpubs.json  adidas.json  allevents.json  atta_galatta.json  attagalatta.com.json  bangalorechessclub.in.json  bengalurusustainabilityforum.json  bhaagoindia.json  bic.json  blrbirders.json  bluetokai.json  bluetokaicoffee.com.json  bngbirds.com.json  bngbirds.json  champaca.json  conosh.json  courtyardkoota.com.json  creativemornings.com.json  creativemornings.json  district.in.json  highape.json  indiarunning.com.json  insider.json  koota.json  lavonne.json  map-india.org.json  mapindia.json  mmb.json  paintbar.json  penciljam.json  pumarun.json  puttingscene.com.json  sabhablr.in.json  scigallery.json  scigalleryblr.json  skillboxes.json  sofar.json  sumukha.com.json  sumukha.json  (+11 more)
src/: aceofpubs.py  adidas.py  artzo.py  atta_galatta.py  bhaagoindia.com.py  bluetokai.py  bms-events.py  bms-movies.py  bms.py  bngbirds.py  build.py  champaca.py  conosh.py  creativemornings.py  event-fetcher.py  eventbrite.py  goethe.py  gullytours.py  highape.py  ics-to-event.py  jsonnet.py  lavonne.py  mapindia.py  mmb.py  paintbar.py  (+20 more)
(+77 files in other folders)
