[project]
name = "blr-today-ingest"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4~=4.13",
    "cleanurl~=0.1",
    "curl_cffi~=0.13",
    "datefinder~=0.7",
    "html2text~=2025.4",
    "html5lib~=1.1",
    "ics~=0.7",
    "jsonnet~=0.21.0",
    "lxml~=5.3",
    "python-dateutil~=2.9",
    "python-jsonpath~=2.0",
    "pytz",
    "PyYAML~=6.0",
    "requests-cache~=1.2",
    "requests~=2.32",
    "ujson~=5.10",
    "urllib3~=2.4",
    "w3lib~=2.3.1",
    "pyld~=2.0.4",
    "jsonschema~=4.25.0",
    "protego>=0.5.0",
]
[project.optional-dependencies]
test = [
    "pytest~=8.2",
    "pytest-httpbin~=2.0",
]
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
